--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -3,3 +3,5 @@
     <div><%= student.first_name + " " + student.last_name %></div>
   <% end %>
 </div>
+
+<%# why are we mapping students in this view file %>
